<resources>
    <string name="app_name">Address Info.</string>
    <string name="head">Present Address Detail</string>
    <string name="presentadd">Present Address</string>
    <string name="state">State</string>
    <string name="Dis">District</string>
    <string name="block">Block</string>
    <string name="pan">Panchayat</string>
    <string name="pcode">Pin Code</string>
    <string name="pno">Phone Number</string>
    <string name="email">E-mail(if any)</string>
    <string name="mno">Mobile Number</string>
    <string name="peradhead">Permanent Address Detail</string>
    <string name="peradd">Permanent Address</string>
    <string name="next">Next</string>
    <string name="title_activity_main">Address Info.</string>
    <string name="depa">Choose Department</string>
    <string name="title_activity_first">Employee Info.</string>
    <string name="personal">Personal Info.</string>
    <string name="f_name">First Name</string>
    <string name="m_name">Middle Name</string>
    <string name="l_name">Last Name</string>
    <string name="b_date">Date of Birth</string>
    <string name="h_name">Father/Mother/Husband Name</string>
    <string name="gender">Gender</string>
    <string name="m_status">Material Status</string>
    <string name="p_pic">Profile Pic</string>
    <string name="atta">Mark The Attached Document</string>
    <string name="height">Height(in cms)</string>
    <string name="b_group">Blood Group</string>
    <string name="of_detail">Employee Office Detail</string>
    <string name="c_desg">Current Designation</string>
    <string name="e_id">Employee ID</string>
    <string name="ctc">Current Salary</string>
    <string name="office">Office Detail</string>
    <string name="title_activity_third">Professional Info.</string>
    <string name="title_activity_fourth">Education Info.</string>
    <string name="save">Save</string>
    <string name="j_detail">Joining Details</string>
    <string name="app_date">Date of Appointment</string>
    <string name="office_name">Office Name at the time of Initial Joining</string>
    <string name="j_date">Date of joining</string>
    <string name="i_desg">Initial Designation</string>
    <string name="m_rect">Mode of Recruitment</string>
    <string name="e_type">Employee Type</string>
    <string name="s_detail">Salary Details at Joining Time</string>
    <string name="b_pay">Basic Pay</string>
    <string name="edu_detail">Basic Education Details</string>
    <string name="edu">Education</string>
    <string name="bu_name">Name of Board/University</string>
    <string name="marks">Marks Obtained(in %)</string>
    <string name="p_year">Passing Year</string>
    <string name="stream">Stream</string>
    <string name="grade">Grade</string>
    <string name="t_detail">Technical Education Deatail</string>
    <string name="p_detail">Professional Education Deatail</string>
    <string name="ti_detail">Training Deatail in India</string>
    <string name="t_type">Training Type</string>
    <string name="t_name">Topic Name</string>
    <string name="n_inst">Nmae of the Institute</string>
    <string name="s_by">Sponsered By</string>
    <string name="f_date">Date From</string>
    <string name="t_date">Date to</string>
    <string name="a_detail">Training Deatail Abroad</string>
    <string name="title_activity_launch">Centura Tecnology</string>
    <string name="c_select">Choose Catagory</string>
    <string name="country_prompt">Choose a country</string>
    <string name="android">Android</string>
    <string name="backend">Backend</string>
    <string name="ios">iOS</string>
    <string name="web">Web</string>
    <string name="xamarin">Xamarin</string>
    <string name="marketing">Marketing</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="u_name">Username/Mail ID</string>
    <string name="pass">Password</string>
    <string name="title_activity_member">Member Name</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="title_activity_register">Register</string>


</resources>
