<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="#b0000000" >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/rl_2"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/curve_shap"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/Background"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="14dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="Choose Ctagory"
                android:textSize="@dimen/size_of_header"
                android:textStyle="normal|bold" />
            <TextView
                android:id="@+id/tv_android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="25dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/android"
                android:textSize="@dimen/size_of_header"
                android:textStyle="normal|bold" />
            <TextView
                android:id="@+id/tv_back"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="25dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/backend"
                android:textSize="@dimen/size_of_header"
                android:textStyle="normal|bold" />
            <TextView
                android:id="@+id/tv_ios"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="25dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/ios"
                android:textSize="@dimen/size_of_header"
                android:textStyle="normal|bold" />
            <TextView
                android:id="@+id/tv_web"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="25dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/web"
                android:textSize="@dimen/size_of_header"
                android:textStyle="normal|bold" />
            <TextView
                android:id="@+id/tv_xam"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="25dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/xamarin"
                android:textSize="@dimen/size_of_header"
                android:textStyle="normal|bold" />
            <TextView
                android:id="@+id/tv_mar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="25dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/marketing"
                android:textSize="@dimen/size_of_header"
                android:textStyle="normal|bold" />



        </LinearLayout>
    </ScrollView>

</RelativeLayout>