<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="materialtest.example.vishal.materialdesign.activity.FirstActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:id="@+id/second_act"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_second">


        <ScrollView
            android:id="@+id/contentScroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bt_next1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Background"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="14dp"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/personal"
                    android:textSize="@dimen/size_of_header"
                    android:textStyle="normal|bold" />


                <ImageView
                    android:id="@+id/iv1"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:paddingBottom="5dp"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:paddingTop="5dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.07" />

                <Button
                    android:id="@+id/pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="Select Image"
                    android:textColor="@color/textcolor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/ftv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/f_name" />

                    <EditText
                        android:id="@+id/etf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape"
                        android:paddingBottom="8dp"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:paddingTop="8dp" />

                    <TextView
                        android:id="@+id/mtv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/m_name" />

                    <EditText
                        android:id="@+id/etm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape"
                        android:paddingBottom="8dp"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:paddingTop="8dp" />

                    <TextView
                        android:id="@+id/ltv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/l_name" />

                    <EditText
                        android:id="@+id/etl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape"
                        android:paddingBottom="8dp"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:paddingTop="8dp" />

                    <TextView
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/b_date" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/shape"
                        android:datePickerMode="spinner"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp" />

                    <TextView
                        android:id="@+id/htv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/h_name" />

                    <EditText
                        android:id="@+id/eth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape"
                        android:paddingBottom="8dp"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:paddingTop="8dp"/>

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/gender" />

                    <RadioGroup
                        android:id="@+id/rg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="Male" />

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Female" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/mstv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/m_status" />

                    <EditText
                        android:id="@+id/ets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape"
                        android:paddingBottom="8dp"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:paddingTop="8dp"/>

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/atta" />

                    <CheckBox
                        android:id="@+id/ch1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="10th Marks Card" />

                    <CheckBox
                        android:id="@+id/ch2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="12th Marks Card" />

                    <TextView
                        android:id="@+id/hitv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/height" />

                    <EditText
                        android:id="@+id/ethi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape"
                        android:inputType="numberDecimal"
                        android:paddingBottom="8dp"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:paddingTop="8dp"/>

                    <TextView
                        android:id="@+id/btv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/b_group" />

                    <EditText
                        android:id="@+id/etb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape"
                        android:paddingBottom="8dp"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:paddingTop="8dp" />

                    <TextView
                        android:id="@+id/etv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/email" />

                    <EditText
                        android:id="@+id/ete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape"
                        android:inputType="textWebEmailAddress"
                        android:paddingBottom="8dp"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:paddingTop="8dp" />

                    <TextView
                        android:id="@+id/tfn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/pno" />

                    <EditText
                        android:id="@+id/etp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:background="@drawable/shape"
                        android:inputType="phone"
                        android:paddingBottom="8dp"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:paddingTop="8dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/od"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Background"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="14dp"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/office"
                    android:textSize="@dimen/size_of_header"
                    android:textStyle="normal|bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/cdtv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/c_desg" />

                    <EditText
                        android:id="@+id/etcd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape"
                        android:paddingBottom="8dp"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:paddingTop="8dp" />

                    <TextView
                        android:id="@+id/edtv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/e_id" />

                    <EditText
                        android:id="@+id/etei"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape"
                        android:paddingBottom="8dp"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:paddingTop="8dp" />

                    <TextView
                        android:id="@+id/cstv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/ctc" />

                    <EditText
                        android:id="@+id/etcs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:background="@drawable/shape"
                        android:paddingBottom="8dp"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:paddingTop="8dp" />
                </LinearLayout>

            </LinearLayout>


        </ScrollView>

        <Button
            android:id="@+id/bt_next1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:gravity="center"
            android:textColor="@android:color/white" />


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
